--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html lang="en-us"><script src="https://pygame-web.github.io/archives/0.5/pythons.js" type=module id="site" data-src="vtx,fs,snd,gui" async defer>#<!--
 
 print("""
-Loading codepractice from codepractice.apk
+Loading amok-runner-foen-lock from amok-runner-foen-lock.apk
     Pygbag Version : 0.5.0
     Template Version : 0.5.0
     Python  : 3.11
     CDN URL : https://pygame-web.github.io/archives/0.5/
     Screen  : {{cookiecutter.width}}x{{cookiecutter.height}}
-    Title   : codepractice
-    Folder  : codepractice
+    Title   : amok-runner-foen-lock
+    Folder  : amok-runner-foen-lock
     Authors : pgw
     SPDX-License-Identifier: cookiecutter.spdx
 
@@ -84,12 +84,12 @@ async def custom_site():
 
 
 
-    apk = "codepractice.apk"
+    apk = "amok-runner-foen-lock.apk"
 
-    bundle = "codepractice"
+    bundle = "amok-runner-foen-lock"
 
     # the C or js loader could do that but be explicit.
-    appdir = Path(f"/data/data/{bundle}") # /data/data/codepractice
+    appdir = Path(f"/data/data/{bundle}") # /data/data/amok-runner-foen-lock
     appdir.mkdir()
 
 
@@ -241,7 +241,7 @@ config = {
     user_canvas : 1,
     ume_block : 1,
     can_close : 0,
-    archive : "codepractice",
+    archive : "amok-runner-foen-lock",
     gui_debug : 3,
     cdn : "https://pygame-web.github.io/archives/0.5/",
     autorun : 0,
@@ -250,7 +250,7 @@ config = {
 
 </script>
 
-    <title>codepractice</title>
+    <title>amok-runner-foen-lock</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
